# tp_nlp_regexps_mines

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: formatting.yml
tp_regexps/: decision.py  regexps.py  test_regexps.py
tp_regexps/scripts/: parse_judilibre.py
